fixed alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,15 @@
     @apply bg-gray-50 text-gray-900;
   }
 }
+
+/* Hide number input spinners */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+  appearance: none;
+}
